[gd_scene load_steps=2 format=3 uid="uid://d3w4esbxl2s34"]

[ext_resource type="Script" uid="uid://bk3xwasqmqb24" path="res://addons/quest_weaver/ui/node_properties/sub_graph_node_editor.gd" id="1_4kwsi"]

[node name="SubGraphNodeEditor" type="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
script = ExtResource("1_4kwsi")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Path: "

[node name="QuestGraphPathEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
placeholder_text = "res://path.quest"

[node name="BrowseButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "..."

[node name="WaitForCompletionCheckbox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Wait for Completion"

[node name="DiveInButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Open Sub-Graph"
